<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="BallSeat_IO_typ" Id="{c93c3448-3f85-03a0-1da5-2260c635e3e1}">
    <Declaration><![CDATA[TYPE BallSeat_IO_typ:
STRUCT
	Inputs	: BallSeat_Inputs_typ;
	Outputs	: BallSeat_Outputs_typ;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>