<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="BallSeatStation" Id="{b1740a50-d861-0608-1e6c-96015d42fa0c}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK BallSeatStation EXTENDS MachineStation
VAR_INPUT
	rIO				: REFERENCE TO BallSeat_IO_typ;
	rStation		: REFERENCE TO Station;
	rPrintStation	: REFERENCE TO MultiStation;
END_VAR
VAR_OUTPUT
END_VAR
VAR
	test:INT;
	Payload	: Payload_typ;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*IF rStation = 0 OR rIO = 0 THEN		HOW DO I CHECK FOR THIS???
	RETURN;
END_IF	*)

IF Enable THEN
	IF NOT _Enable THEN
		;
	END_IF

	CASE State OF
		STN_WAIT:
			IF Run AND rStation.MoverInPosition THEN
				Payload						:= rStation.CurrentMover.Payload;
				rIO.Outputs.BallClampOpen	:= TRUE;
				State						:= STN_OPENBALLCLAMP;
			END_IF

		STN_OPENBALLCLAMP:
			IF rIO.Inputs.BallClampOpened THEN
				rIO.Outputs.BallClampOpen		:= FALSE;
				rIO.Outputs.ExtendBallSeater	:= TRUE;
				State							:= STN_PROCESS;
			END_IF

		STN_PROCESS:
			IF rIO.Inputs.BallSeatExtended THEN
				rIO.Outputs.ExtendBallSeater	:= FALSE;
				rIO.Outputs.RetractBallSeater	:= TRUE;
				Payload.BallSeated				:= TRUE;
				rIO.Outputs.BallClampClose		:= TRUE;
				State							:= STN_CLOSEBALLCLAMP;
			END_IF

		STN_CLOSEBALLCLAMP:
			IF rIO.Inputs.BallClampClosed AND rIO.Inputs.BallSeatRetracted THEN
				rIO.Outputs.RetractBallSeater	:= FALSE;
				rIO.Outputs.BallClampClose		:= FALSE;
				State							:= STN_SEND;
			END_IF

		STN_SEND:
			IF Test = 4 THEN Payload.Reject	:= TRUE; END_IF	// TEMP - TO TEST PRINT STATION REJECT HANDLING
			Test := Test + 1;	IF Test = 5 THEN Test := 0; END_IF

			rStation.CurrentMover.Payload	:= Payload;
			rStation.CurrentMover.MoveToMultiStation(rPrintStation);
			rStation.UnregisterCurrent();
			State							:= STN_WAIT;
		
		STN_ERROR:
	
	END_CASE

ELSIF _Enable THEN
	;
END_IF

//Save Previous Values
_Enable	:= Enable;]]></ST>
    </Implementation>
    <Method Name="Cyclic" Id="{c549e30f-3984-0866-11d5-4c5ce5c07157}">
      <Declaration><![CDATA[METHOD Cyclic : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="BallSeatStation">
      <LineId Id="95" Count="2" />
      <LineId Id="107" Count="0" />
      <LineId Id="106" Count="0" />
      <LineId Id="108" Count="0" />
      <LineId Id="111" Count="0" />
      <LineId Id="109" Count="0" />
      <LineId Id="54" Count="0" />
      <LineId Id="23" Count="0" />
      <LineId Id="26" Count="0" />
      <LineId Id="43" Count="0" />
      <LineId Id="130" Count="0" />
      <LineId Id="134" Count="0" />
      <LineId Id="44" Count="1" />
      <LineId Id="37" Count="0" />
      <LineId Id="27" Count="0" />
      <LineId Id="68" Count="0" />
      <LineId Id="70" Count="0" />
      <LineId Id="75" Count="0" />
      <LineId Id="71" Count="1" />
      <LineId Id="38" Count="0" />
      <LineId Id="30" Count="0" />
      <LineId Id="76" Count="1" />
      <LineId Id="131" Count="0" />
      <LineId Id="78" Count="3" />
      <LineId Id="74" Count="0" />
      <LineId Id="31" Count="0" />
      <LineId Id="83" Count="0" />
      <LineId Id="132" Count="0" />
      <LineId Id="84" Count="0" />
      <LineId Id="90" Count="0" />
      <LineId Id="88" Count="0" />
      <LineId Id="40" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="148" Count="1" />
      <LineId Id="151" Count="0" />
      <LineId Id="102" Count="0" />
      <LineId Id="93" Count="0" />
      <LineId Id="136" Count="0" />
      <LineId Id="94" Count="0" />
      <LineId Id="41" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="42" Count="0" />
      <LineId Id="34" Count="0" />
      <LineId Id="112" Count="0" />
      <LineId Id="104" Count="0" />
      <LineId Id="113" Count="2" />
      <LineId Id="103" Count="0" />
      <LineId Id="105" Count="0" />
    </LineIds>
    <LineIds Name="BallSeatStation.Cyclic">
      <LineId Id="9" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>